--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="icon-calc-png" href="/assets/icon-calc.png">  
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button class="operator">—</button>
+        <button id="minus" class="operator">—</button>
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
