--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon-calc-png" href="/assets/icon-calc.png">  
+    <link rel="apple-touch-icon.png" href="/assets/apple-touch-icon.png">  
     <title>Document</title>
 </head>
 <body>
