--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">  
-    <title>Document</title>
+    <title>Calculator</title>
+    <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png">  
 </head>
 <body>
     <div class="calculator-grid">
